--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li>Was in charge of implenting systems and coaching cooks to maintain consistency.</li>
       <li>Got to learn a new type of cuisine that I wasn't familar with</li>
       
-      <div class="education">
+      <div class="info-section">
         <h3>Educatiion</h3>
       </div>
       
