--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <p>I've been in the resturant industry the past 22 years and I'm looking to change careers. I'm a very self motivated and hardworking individual that is looking for a new challenge in technology.</p>  </p>
   </div>
   
-  
-  <div class="info-section">
+   <div class="pro-exp">
     <h3>Professional Experience</h3>
   </div>
   
@@ -41,7 +40,7 @@
       <li>Was in charge of implenting systems and coaching cooks to maintain consistency.</li>
       <li>Got to learn a new type of cuisine that I wasn't familar with</li>
       
-      <div class="info-section">
+     <div class="edu-section">
         <h3>Educatiion</h3>
       </div>
       
