--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <li>Got to learn a new type of cuisine that I wasn't familar with</li>
       
      <div class="edu-section">
-        <h3>Educatiion</h3>
+     <h3>Education</h3>
       </div>
       
       <div>
