--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <h3>2601 Colfax Ave S</h3>
     <h3>Mineapolis, MN 55408</h3>
     <h3>763-218-5510</h3>
+    <h5>brianmw199@gmail.com</h5>
+    <br>
     
     <h3>Outline</h3>
     <p>I've been in the resturant industry the past 22 years and I'm looking to change careers. I'm a very self motivated and hardworking individual that is looking for a new challenge in technology.</p>  </p>
