--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
       
       <div>
-        <h4>Area learning center, Graduated 2000</h4>
+        <h4>Area learning center, 2000</h4>
         <h4>Le cordon Bleu at Brown college, Mendota Heights 2003</h4>
         
         </html>
