--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
       <div>
         <h4>Area learning center, 2000</h4>
         <h4>Le cordon Bleu at Brown college, Mendota Heights 2003</h4>
+        </div>
         
         <footer>
           <p>References available upon request</p>
